a lot of changes in logic: in ingredient storage - add beer as a type, - add pack as a unit, - add field price, - add field has_alcohol, - add field can_be_ordered: in DrinkQueue - change name of model to Orders, - add new field storage_order; create view of orders list and history orders list in customer and bartender app; add migrations;

--- a/templates/customer/drink/history_list_drink_ordered.html
+++ b/templates/customer/drink/history_list_drink_ordered.html
@@ -16,12 +16,14 @@
             {% if drink.drink.image %}
               <img class="card-img-top core_image_sizes" src="{{ drink.drink.image.url }}" alt="{{ drink.drink.name }}">
             {% else %}
-              <img class="card-img-top core_image_sizes" src="{% static 'img/no-image-available.jpg' %}" alt="No image available">
+              <img class="card-img-top core_image_sizes" src="{% static 'img/no-image-available.jpg' %}"
+                   alt="No image available">
             {% endif %}
           </div>
           <div class="card-body">
+            <div class="card-text">Nazwa: <p>{{ drink.name }}</p></div>
             <div class="row">
-              <div class="col-6">Nazwa: <p>{{ drink.drink.name }}</p></div>
+              <div class="col-6">Data zamówienia: <p>{{ drink.order_date }}</p></div>
               <div class="col-6">Status: <p>{{ drink.get_status_display }}</p></div>
             </div>
             <div class="card-text">Składniki:
@@ -56,7 +58,8 @@
             {% if drink.drink.image %}
               <img class="card-img-top core_image_sizes" src="{{ drink.drink.image.url }}" alt="{{ drink.drink.name }}">
             {% else %}
-              <img class="card-img-top core_image_sizes" src="{% static 'img/no-image-available.jpg' %}" alt="No image available">
+              <img class="card-img-top core_image_sizes" src="{% static 'img/no-image-available.jpg' %}"
+                   alt="No image available">
             {% endif %}
           </div>
           <div class="card-body">
