--- a/templates/customer/base.html
+++ b/templates/customer/base.html
@@ -7,7 +7,7 @@
     <a class="nav-link" href="{% url 'customer:home' %}">Strona główna</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="{% url 'customer:drink_list' %}">Menu</a>
+    <a class="nav-link" href="{% url 'customer:menu' %}">Menu</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="{% url 'customer:orders_list' %}">Zamówienia</a>
