--- a/templates/customer/orders/list_order.html
+++ b/templates/customer/orders/list_order.html
@@ -1,12 +1,14 @@
 {% extends "customer/base.html" %}
 {% load static %}
-{% block title %}Lista Drinków{% endblock %}
+{% block title %}Menu{% endblock %}
 
 
 {% block content %}
   <div class="row">
     <p>Tutaj jakieś Filtry w planie</p>
   </div>
+
+  {# Drinki #}
   <div class="row justify-content-center"><h3>Drinki</h3></div>
   <div class="row">
     {% for drink in drinks %}
@@ -22,7 +24,7 @@
           </div>
           <div class="card-body">
             <div class="card-text text-center">
-              <button type="submit" onclick="orderDrink({{ drink.id }})" class="btn btn-success btn-lg">Zamów</button>
+              <button type="submit" onclick="createOrder({{ drink.id }}, true)" class="btn btn-success btn-lg">Zamów</button>
             </div>
             <div class="card-text">Nazwa: <p>{{ drink.name }}</p></div>
             <div class="card-text">Składniki:
@@ -43,6 +45,42 @@
       </div>
     {% endfor %}
   </div>
+
+  {# End #}
+
+  {# other items #}
+  <div class="row justify-content-center"><h3>Inne</h3></div>
+  <div class="row">
+    {% for order in other_orders %}
+      <div class="col-12 col-lg-4 d-flex align-items-stretch">
+        <div class="card rounded" style="font-size:2vmin">
+          <div class="card-body text-center core_image_frame">
+            {% if order.image %}
+              <img class="card-img-top core_image_sizes" src="{{ order.image.url }}" alt="{{ order.name }}">
+            {% else %}
+              <img class="card-img-top core_image_sizes" src="{% static 'img/no-image-available.jpg' %}"
+                   alt="No image available">
+            {% endif %}
+          </div>
+          <div class="card-body">
+            <div class="card-text text-center">
+              <button type="submit" onclick="createOrder({{ order.id }}, false)" class="btn btn-success btn-lg">Zamów
+              </button>
+            </div>
+            <div class="card-text">Nazwa: <p>{{ order.name }} {% if order.has_alcohol %}
+              <i class="fas fa-glass-martini-alt"></i>{% endif %}</p></div>
+            <div class="card-text">
+              <div class="row">
+                <div class="col-6">Typ: <p>{{ order.get_type_display }}</p></div>
+                <div class="col-6">Cena: <p>{{ order.price }}</p></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    {% endfor %}
+  </div>
+  {# End #}
 
 {% endblock %}
 {% block js %}
