--- a/templates/bartender/base.html
+++ b/templates/bartender/base.html
@@ -10,7 +10,7 @@
     <a class="nav-link" href="{% url 'bartender:drink_list' %}">Drinki</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Kolejka zamówień</a>
+    <a class="nav-link" href="{% url 'bartender:orders_list' %}">Kolejka zamówień</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="#">Propozycje drinków</a>
