add page reloading after customer ordered things; fix problem with add new ingredient template; button ux changes;

--- a/templates/bartender/drink/update_drink.html
+++ b/templates/bartender/drink/update_drink.html
@@ -51,7 +51,7 @@
                 szczegółów</a>
             </div>
             <div class="col-lg-3 col-6 text-center text-right">
-              <a class="btn btn-danger btn-round"
+              <a class="btn btn-outline-danger btn-round"
                  href="{% url 'bartender:delete_drink' form.instance.id %}">Usuń</a>
             </div>
             <div class="col-lg-3 col-6 text-center text-right">
