--- a/templates/bartender/storage/update_ingredient.html
+++ b/templates/bartender/storage/update_ingredient.html
@@ -51,7 +51,7 @@
                 magazynu</a>
             </div>
             <div class="col-lg-3 col-6 text-center text-right">
-              <a class="btn btn-danger btn-round"
+              <a class="btn btn-outline-danger btn-round"
                  href="{% url 'bartender:delete_ingredient' form.instance.id %}">Usuń</a>
             </div>
             <div class="col-lg-3 col-6 text-center text-right">
