create baner template; add baner to homepage core; create instruction for client user on homepage template; fix image order render on ordered list and history ordered list;

--- a/templates/customer/base.html
+++ b/templates/customer/base.html
@@ -10,7 +10,7 @@
     <a class="nav-link" href="{% url 'customer:menu' %}">Menu</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="{% url 'customer:orders_list' %}">Zamówienia</a>
+    <a class="nav-link" href="{% url 'customer:orders_list' %}">Aktualne Zamówienia</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="{% url 'customer:history_orders_list' %}">Historia Zamówień</a>
