--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -12,19 +12,8 @@
   </li>
 {% endblock %}
 
-{% block front_foto %}
-  <div class="page-header page-header-small">
-    <div class="page-header-image" data-parallax="true" style="background-image: URL({% static 'img/bar.jpg' %});">
-    </div>
-    <div class="content-center">
-      <div class="container">
-        <h2 class="title">System Wspomagania Barmana</h2>
-      </div>
-    </div>
-  </div>
-{% endblock %}
-
 {% block content %}
+  {% include "core/baner.html" %}
   <div class="row">
     <h4>Czym jest System Wspomagania Barmana</h4>
     <p>
@@ -32,5 +21,4 @@
       barach.
     </p>
   </div>
-
 {% endblock %}
