--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -1,20 +1,3 @@
-<!--
-
-=========================================================
-* Now UI Kit - v1.3.0
-=========================================================
-
-* Product Page: https://www.creative-tim.com/product/now-ui-kit
-* Copyright 2019 Creative Tim (http://www.creative-tim.com)
-* Licensed under MIT (https://github.com/creativetimofficial/now-ui-kit/blob/master/LICENSE.md)
-
-* Designed by www.invisionapp.com Coded by www.creative-tim.com
-
-=========================================================
-
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-
--->
 {% load static %}
 <!DOCTYPE html>
 <html lang="pl">
@@ -30,9 +13,8 @@
         name='viewport'/>
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet"/>
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-  <link href="{% static 'css/fontawesome_all.css' %}" rel="stylesheet"/>
+  <link href="{% static 'css/fontawesome_all.min.css' %}" rel="stylesheet"/>
   <!-- CSS Files -->
   <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet"/>
   <link href="{% static 'css/now-ui-kit.css' %}?v=1.3.0" rel="stylesheet"/>
