--- a/templates/core/login.html
+++ b/templates/core/login.html
@@ -10,35 +10,37 @@
 {% endblock %}
 {% block content %}
   <div class="row">
-    <div class="card col-lg-4 mx-auto">
-      <div class="card-body">
-        <form class="form" method="POST">
-          {% csrf_token %}
-          {% if form.non_field_errors %}
-            <div class="alert alert-warning alert-dismissible fade show" role="alert">
-              {{ form.non_field_errors }}
-              <button type="button" class="close" data-dismiss="alert" aria-label="close">
-                <span aria-hidden="true">&times;</span>
-              </button>
+    <div class="col-11 col-lg-4 mx-auto">
+      <div class="card">
+        <div class="card-body">
+          <form class="form" method="POST">
+            {% csrf_token %}
+            {% if form.non_field_errors %}
+              <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                {{ form.non_field_errors }}
+                <button type="button" class="close" data-dismiss="alert" aria-label="close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+            {% endif %}
+            <div class="row py-3">
+              <h3 class="text-center">Logowanie</h3>
             </div>
-          {% endif %}
-          <div class="row py-3">
-            <h3 class="text-center">Logowanie</h3>
-          </div>
 
-          <div class="row py-3">
-            <input type="text" class="form-control" id="id_username" autofocus=""
-                   name="username" autocomplete="username" autocapitalize="none" required=""
-                   placeholder="Login">
-          </div>
-          <div class="row py-3">
-            <input type="password" class="form-control" id="id_password" name="password"
-                   autocomplete="current-password" required="" placeholder="Hasło">
-          </div>
-          <button type="submit" class="btn btn-warning btn-round btn-block mb-3">
-            Zaloguj
-          </button>
-        </form>
+            <div class="row py-3">
+              <input type="text" class="form-control" id="id_username" autofocus=""
+                     name="username" autocomplete="username" autocapitalize="none" required=""
+                     placeholder="Login">
+            </div>
+            <div class="row py-3">
+              <input type="password" class="form-control" id="id_password" name="password"
+                     autocomplete="current-password" required="" placeholder="Hasło">
+            </div>
+            <button type="submit" class="btn btn-warning btn-round btn-block mb-3">
+              Zaloguj
+            </button>
+          </form>
+        </div>
       </div>
     </div>
   </div>
