--- a/templates/bartender/base.html
+++ b/templates/bartender/base.html
@@ -13,6 +13,9 @@
     <a class="nav-link" href="{% url 'bartender:orders_list' %}">Kolejka zamówień</a>
   </li>
   <li class="nav-item">
+    <a class="nav-link" href="{% url 'bartender:history_orders_list' %}">Historia zamówień</a>
+  </li>
+  <li class="nav-item">
     <a class="nav-link" href="#">Propozycje drinków</a>
   </li>
   <li class="nav-item">
