creating form for customer user; creating views and tempalte for user creation view and user detail view with qr redirecting to direct login;

--- a/templates/bartender/base.html
+++ b/templates/bartender/base.html
@@ -4,6 +4,9 @@
     <a class="nav-link" href="{% url 'bartender:home' %}">Strona główna</a>
   </li>
   <li class="nav-item">
+    <a class="nav-link" href="{% url 'bartender:create_customer_account' %}">Utwórz konto klienta</a>
+  </li>
+  <li class="nav-item">
     <a class="nav-link" href="{% url 'bartender:storage_ingredient_list' %}">Magazyn</a>
   </li>
   <li class="nav-item">
