--- a/templates/bartender/ingredient_needed/create_ingredient_needed.html
+++ b/templates/bartender/ingredient_needed/create_ingredient_needed.html
@@ -32,9 +32,7 @@
                 {% for error in field.errors %}
                   <div class="alert alert-warning alert-dismissible fade show mt-1 mb-1" role="alert">
                     {{ error }}
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                   </div>
                 {% endfor %}
               </div>
