--- a/templates/bartender/ingredient_needed/update_ingredient_needed.html
+++ b/templates/bartender/ingredient_needed/update_ingredient_needed.html
@@ -32,9 +32,7 @@
                 {% for error in field.errors %}
                   <div class="alert alert-warning alert-dismissible fade show mt-1 mb-1" role="alert">
                     {{ error }}
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                   </div>
                 {% endfor %}
               </div>
@@ -47,7 +45,8 @@
                 szczegółów</a>
             </div>
             <div class="col-lg-3 col-12 text-right">
-              <a class="btn btn-outline-danger btn-round" href="{% url 'bartender:delete_ingredient_needed' object.id %}">Usuń</a>
+              <a class="btn btn-outline-danger btn-round"
+                 href="{% url 'bartender:delete_ingredient_needed' object.id %}">Usuń</a>
             </div>
             <div class="col-lg-3 col-12 text-right">
               <button class="btn btn-outline-success btn-round" type="submit">Zapisz</button>
