--- a/templates/core/change_password.html
+++ b/templates/core/change_password.html
@@ -4,50 +4,48 @@
 {% block content %}
   {% if user.is_authenticated %}
     <div class="row">
-      <div class="card bg-light col-lg-6 col-12 mx-auto">
-        <h4 class="card-title text-center">Zmiana hasła</h4>
-        <div class="card-body">
-          {% if form.errors %}
-            {% for field in form %}
-              {% if field.errors %}
-                <div class="alert alert-warning alert-dismissible fade show mt-1 mb-3" role="alert">
-                  {{ field.label }} - {{ field.errors|striptags }}
-                  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
+      <div class="col-lg-6 col-12 mx-auto">
+        <div class="card bg-light">
+          <h4 class="card-title text-center">Zmiana hasła</h4>
+          <div class="card-body">
+            {% if form.errors %}
+              {% for field in form %}
+                {% if field.errors %}
+                  <div class="alert alert-warning alert-dismissible fade show mt-1 mb-3" role="alert">
+                    {{ field.label }} - {{ field.errors|striptags }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                  </div>
+                {% endif %}
+              {% endfor %}
+            {% endif %}
+            {% if messages %}
+              {% for message in messages %}
+                <div class="alert alert-success alert-dismissible fade show mt-1 mb-3" role="alert">
+                  {{ message }}
+                  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
-              {% endif %}
-            {% endfor %}
-          {% endif %}
-          {% if messages %}
-            {% for message in messages %}
-              <div class="alert alert-success alert-dismissible fade show mt-1 mb-3" role="alert">
-                {{ message }}
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-            {% endfor %}
-          {% endif %}
-          <form method="POST" class="form-horizontal">
-            {% csrf_token %}
-            {% for field in form %}
-              <div class="row">
-                <div class="col-lg-5 col-6 h5">
-                  <label class="col-form-label">{{ field.label }}</label>
-                </div>
-                <div class="col-lg-7 col-6">
-                  <div class="form-group">
-                    {{ field }}
-                    <small id="{{ field.text }}help" class="form-text text-muted">{{ field.help_text }}</small>
+              {% endfor %}
+            {% endif %}
+            <form method="POST" class="form-horizontal">
+              {% csrf_token %}
+              {% for field in form %}
+                <div class="row">
+                  <div class="col-lg-5 col-6 h5">
+                    <label class="col-form-label">{{ field.label }}</label>
+                  </div>
+                  <div class="col-lg-7 col-6">
+                    <div class="form-group">
+                      {{ field }}
+                      <small id="{{ field.text }}help" class="form-text text-muted">{{ field.help_text }}</small>
+                    </div>
                   </div>
                 </div>
+              {% endfor %}
+              <div class="row justify-content-center">
+                <button class="btn btn-success btn-round">Zmień hasło</button>
               </div>
-            {% endfor %}
-            <div class="row justify-content-center">
-              <button class="btn btn-success btn-round">Zmień hasło</button>
-            </div>
-          </form>
+            </form>
+          </div>
         </div>
       </div>
     </div>
