--- a/templates/core/login.html
+++ b/templates/core/login.html
@@ -2,6 +2,8 @@
 {% load crispy_forms_filters %}
 
 {% load crispy_forms_tags %}
+
+{% load static %}
 {% block title %}Login{% endblock %}
 {% block navbar %}
   <li class="nav-item">
@@ -13,15 +15,21 @@
     <div class="col-11 col-lg-4 mx-auto">
       <div class="card">
         <div class="card-body">
-          <form class="form" method="POST">
+          <form class="form" method="POST" id="login_form">
             {% csrf_token %}
             {% if form.non_field_errors %}
               <div class="alert alert-warning alert-dismissible fade show" role="alert">
                 {{ form.non_field_errors }}
-                <button type="button" class="close" data-dismiss="alert" aria-label="close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
               </div>
+            {% endif %}
+            {% if messages %}
+              {% for message in messages %}
+                <div class="alert alert-warning alert-dismissible fade show mt-1 mb-3" role="alert">
+                  {{ message }}
+                  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+              {% endfor %}
             {% endif %}
             <div class="row py-3">
               <h3 class="text-center">Logowanie</h3>
@@ -44,4 +52,8 @@
       </div>
     </div>
   </div>
+{% endblock %}
+
+{% block js %}
+<script src="{% static 'js/core/login.js' %}" type="text/javascript"></script>
 {% endblock %}
