--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -107,6 +107,8 @@
 <script src="{% static 'js/core/jquery.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'js/core/popper.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'js/core/bootstrap.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/core/bootstrap.bundle.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/core/bootstrap.esm.min.js' %}" type="text/javascript"></script>
 <!--  Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/ -->
 <script src="{% static 'js/plugins/bootstrap-switch.js' %}"></script>
 <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
