--- a/templates/core/login.html
+++ b/templates/core/login.html
@@ -1,8 +1,9 @@
 {% extends 'core/base.html' %}
-{% load crispy_forms_filters %}
-
-{% load crispy_forms_tags %}
-
+{#{% load crispy_forms_filters %}#}
+{##}
+{#{% load crispy_forms_tags %}#}
+{# TODO nie potrzebne chyba crispy formsy#}
+{# TODO adas  #}
 {% load static %}
 {% block title %}Login{% endblock %}
 {% block navbar %}
@@ -55,5 +56,5 @@
 {% endblock %}
 
 {% block js %}
-<script src="{% static 'js/core/login.js' %}" type="text/javascript"></script>
+  <script src="{% static 'js/core/login.js' %}" type="text/javascript"></script>
 {% endblock %}
