--- a/templates/customer/base.html
+++ b/templates/customer/base.html
@@ -1,7 +1,7 @@
 {% extends "core/base.html" %}
 {% block navbar %}
   <li class="nav-item">
-    <a class="nav-link" href="{% url 'customer:set_table' %}">Zmien stolik<img src="https://img.icons8.com/material-outlined/24/ffffff/table.png"/></a>
+    <a class="nav-link" href="{% url 'customer:set_table' %}">Zmien stolik<img src="https://img.icons8.com/material-outlined/24/ffffff/table.png" alt="table-icon"/></a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="{% url 'customer:home' %}">Strona główna</a>
