creating pagination template; make home pages of apps to looks like dashboard; creating customer list template and view; from now bartender can reject order on every stage;

--- a/static/css/core.css
+++ b/static/css/core.css
@@ -2,6 +2,16 @@
     background: whitesmoke;
 }
 
+.dashboard_text {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+}
+
+.dashboard_text:hover {
+    color: purple;
+}
+
 .c-body {
     /*background: #ebebeb; #TODO Naprawić tło core templatki*/
 }
