--- a/templates/bartender/home.html
+++ b/templates/bartender/home.html
@@ -6,47 +6,123 @@
 {% block content %}
   {% include "core/baner.html" %}
   <div class="row">
-    <h4>Witamy w panelu barmana</h4>
+    <h4 class="text-center">Dashboard</h4>
   </div>
-  <div class="row">
-    <p>What is Lorem Ipsum?
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-      standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
-      type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
-      remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
-      Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions
-      of Lorem Ipsum.
-
-      Why do we use it?
-      It is a long established fact that a reader will be distracted by the readable content of a page when looking at
-      its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as
-      opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing
-      packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will
-      uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by
-      accident, sometimes on purpose (injected humour and the like).
-
-
-      Where does it come from?
-      Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin
-      literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney
-      College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and
-      going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes
-      from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero,
-      written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first
-      line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-
-      The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32
-      and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form,
-      accompanied by English versions from the 1914 translation by H. Rackham.
-
-      Where can I get some?
-      There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some
-      form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a
-      passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All
-      the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first
-      true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model
-      sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always
-      free from repetition, injected humour, or non-characteristic words etc.</p>
+  <div class="row pt-4 justify-content-center">
+    <div class="col-lg-4 col-12 my-2">
+      <div class="card h-100">
+        <a href="{% url 'bartender:customer_list' %}" class="dashboard_text">
+          <div class="card-body ">
+            <div class="card-title text-center">Lista klientów</div>
+            <div class="card-text text-center">
+              <p class="text-justify">
+                Widok listy kont klientów serwisie.
+              </p>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-lg-4 col-12 my-2">
+      <div class="card h-100">
+        <a href="{% url 'bartender:create_customer_account' %}" class="dashboard_text">
+          <div class="card-body ">
+            <div class="card-title text-center">Utwórz konto klienta</div>
+            <div class="card-text text-center">
+              <p class="text-justify">
+                Znajduje się tam formularz dzięki, któremu można generować login i hasło dla klientów baru.
+              </p>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-lg-4 col-12 my-2">
+      <div class="card h-100">
+        <a href="{% url 'bartender:storage_ingredient_list' %}" class="dashboard_text">
+          <div class="card-body">
+            <div class="card-title text-center">Magazyn</div>
+            <div class="card-text text-center">
+              <p class="text-justify">
+                Znajduje się tam lista stanów magazynowych baru. Możesz tam dodać nowe produkty, usuwać oraz edytować
+                (uzupełniać stany) aktualnych produktów.
+              </p>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-lg-4 col-12 my-2">
+      <div class="card h-100">
+        <a href="{% url 'bartender:drink_list' %}" class="dashboard_text">
+          <div class="card-body">
+            <div class="card-title text-center">Drinki</div>
+            <div class="card-text text-center">
+              <p class="text-justify">
+                Znajduje się tam lista drinków. Możesz tam dodawać nowe drinki, usuwać je oraz edytować aktualne drinki.
+              </p>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-lg-4 col-12 my-2">
+      <div class="card h-100">
+        <a href="{% url 'bartender:orders_list' %}" class="dashboard_text">
+          <div class="card-body">
+            <div class="card-title text-center">Kolejka zamówień</div>
+            <div class="card-text text-center">
+              <p class="text-justify">
+                Znajdują się tam aktualne zamówienia do realizacji. Lądują tam zamówienia ze statusem utworzono,
+                zaakceptowano oraz w trakcie przygotowania.
+              </p>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-lg-4 col-12 my-2">
+      <div class="card h-100">
+        <a href="{% url 'bartender:history_orders_list' %}" class="dashboard_text">
+          <div class="card-body">
+            <div class="card-title text-center">Historia zamówień</div>
+            <div class="card-text text-center">
+              <p class="text-justify">
+                Znajdują się ukończone, anulowane oraz odrzucone zamówienia.
+              </p>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-lg-4 col-12 my-2">
+      <div class="card h-100">
+        <a href="{% url 'bartender:home' %}" class="dashboard_text">
+          <div class="card-body">
+            <div class="card-title text-center">Propozycje drinków</div>
+            <div class="card-text text-center">
+              <p class="text-justify">
+                Znajdują się tam propozycje drinków do dodania w barze.
+              </p>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-lg-4 col-12 my-2">
+      <div class="card h-100">
+        <a href="{% url 'bartender:home' %}" class="dashboard_text">
+          <div class="card-body">
+            <div class="card-title text-center">Statystyki</div>
+            <div class="card-text text-center">
+              <p class="text-justify">
+                Znajdują się tam przychody baru w danym dniu.
+              </p>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
   </div>
 
 {% endblock %}
